k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: todos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-backend
  template:
    metadata:
      labels:
        app: todos-backend
    spec:
      containers:
      - name: backend
        image: haakaash/todos-backend:v1
        imagePullPolicy: IfNotPresent
       
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: todos-app
spec:
  type: ClusterIP
  selector:
    app: todos-backend
  ports:
    - port: 8080
      targetPort: 8080
