k8s/stateless_postgres.yaml
# POSTGRES
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: todos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-postgres
  template:
    metadata:
      labels:
        app: todos-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          emptyDir: {}
            
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: todos-app
spec:
  type: ClusterIP   
  selector:
    app: todos-postgres
  ports:
    - port: 5432
      targetPort: 5432
